fixed links chips overlap

--- a/app.css
+++ b/app.css
@@ -110,18 +110,19 @@ width:0;min-width:100%;max-height: 54px;/*this forces the title from expanding i
     display: grid;
     margin: 0;
     margin-top: 8px;
-
-    grid-template-columns: repeat(3, 30%);
+    column-gap: 2px;
+    grid-template-columns: repeat(3, minmax(20px, 1fr) );
 }
 .link{
     display: flex;
     flex-direction: row;
     align-items: center;
     align-self: flex-start;
-    justify-self: flex-start;
+    justify-self: stretch;
     padding: 16px;
     border-radius:  500px ;
     cursor: pointer;
+    
 
     /*the following section is used in conjunction with .show class to trigger animation when scrolling*/
     opacity: 0;
@@ -158,6 +159,11 @@ a.link:visited{
     margin-right: 16px;
     border: 1px solid #fafafa;
     border-radius: 100%;
+}
+.link>.label{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .parts-wrapper{
     background-color: rgba(255, 0, 0, 0);
@@ -551,6 +557,9 @@ box-shadow: 0 0 14px rgba(241, 241, 241, 0.205);
     }
     .links-wrapper{
         grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+    .link{
+        justify-self: flex-start;
     }
 
     .project-item{
